Correct typo in demo text.

--- a/StyleManagement/sample.plist
+++ b/StyleManagement/sample.plist
@@ -21,7 +21,7 @@
 		<key>Date</key>
 		<date>2014-04-25T22:41:37Z</date>
 		<key>Description</key>
-		<string>Florence brought out our inner goofbals.</string>
+		<string>Florence brought out our inner goofballs.</string>
 	</dict>
 	<key>Cinque Terre</key>
 	<dict>
